--- a/client/code/css/forContacts.css
+++ b/client/code/css/forContacts.css
@@ -1,24 +1,204 @@
 /*ROOTS*/
 :root {
-    --header-font-size: 20px;
-    --font-family: monospace;
+    --base-size: 1rem; /* 16px=1rem */
+    --coef: 30; /*Coef proportionality of contacts columns*/
+    --coef_b_fields: 1.375; /*Coef proportionality of date fields*/
 }
+
 /*BODY*/
 body
 {
     margin: 0;
     padding: 0;
     min-width: 720px;
-    background-color: hsl(235, 50%, 4%, 1);
+    height: 100vh;
+    background-image: url("https://wallpapersmug.com/u/8f55cf/planets_blue_falling_stars_minimal_4k.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 /*MAIN*/
 main {
     display: flex;
+    flex-direction: row;
+    color: white;
+    font-family: Segoe UI,SegoeUI,Noto Sans,sans-serif;
+    padding: calc(var(--base-size)/ 2);
+}
+
+/*Other*/
+main>p {
+    font-size: calc(var(--base-size)* 4);
+    margin-top: 0;
+}
+
+/*Table*/
+.contacts_table {
+    width: calc(var(--base-size)* 65.375);
+}
+.contacts_head_row {
+    display: flex;
+    flex-direction: row;
+    height: calc(var(--base-size)* 2);
     align-items: center;
-    justify-content: center;
-    height: 90vh;
-    color: floralwhite;
-    font-size: calc(var(--header-font-size)*4);
-    font-family: monospace;
+}
+.contacts_h_title {
+    font-weight: bold;
+}
+.contacts_body {
+    display: flex;
+    flex-direction: column;
+}
+.contacts_b_row {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    height: calc(var(--base-size)* 2);
+    cursor: pointer;
+}
+.contacts_b_row:after {
+    content:'';
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    visibility: hidden;
+}
+.contacts_b_row:hover:after {
+    visibility: visible;
+    background: linear-gradient(to right, #0000 2%, #cbcccc 16%, #cbcccc 83%, #0000 98%);
+    opacity: 16%;
+}
+.contacts_b_row:hover>.contacts_b_field {
+    color: #4c4c4c;
+}
+.contacts_b_row:active:after {
+    background: linear-gradient(to right, #0000 2%, #2196f3 16%, #2196f3 84%, #0000 98%);
+}
+.contacts_head_row ~ hr{
+    margin: 0;
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #cbcccc;
+}
+hr.line {
+    margin: 0;
+    border: 0;
+    height: 1px;
+    width: inherit;
+    background-image: linear-gradient(to right, #0000, #cbcccc 20%, #cbcccc 80%, #0000);
+}
+.contacts_b_field {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.col_name, .col_email {
+    width: calc(var(--coef) * 1%);
+}
+.col_phone, .col_birthday {
+    width: calc((100%  - var(--coef) * 1% * 2) / 2);
+}
+
+
+
+
+
+
+
+/*--- Add Table ---*/
+form#new_contact {
+    display: none;
+}
+.contact_add {
+    flex-grow: 1;
+}
+.form_inputs {
+    padding: var(--base-size) 0;
+}
+.input_row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: calc(var(--base-size)* 3);
+    gap: var(--base-size);
+}
+i {
+    flex: 0 0 calc(var(--base-size)* 1.5);
+    text-align: center;
+}
+
+/*--- Строки Input общий стиль ---*/
+input_custom {
+    display: flex;
+    height: fit-content;
+    width: fit-content;
+    align-items: center;
+    position: relative;
+}
+/*Прятки для стрелок*/
+input {
+    -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button,
+input::-webkit-calendar-picker-indicator {
+    visibility: hidden;
+}
+/*Оформление полей ввода*/
+input_custom :first-child {
+    height: calc(var(--base-size)* 2);
+    width: calc(var(--base-size)* 20);
+    padding-block: 0;
+    padding-inline: var(--base-size);
+    font-family: inherit;
+    font-size: inherit;
+    background-color: white;
+    color: #212529;
+    border: 1px solid #bdbdbd;
+    border-radius: calc(var(--base-size) / 2);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    appearance: none;
+}
+/*Оформление приписок*/
+input_custom label {
+    position: absolute;
+    left: calc(var(--base-size)* 0.5);
+    pointer-events: none;
+    background: none;
+    color: #757575;
+    padding-inline: calc(var(--base-size)* 0.25);
+    transition: top 0.1s ease-in-out, scale 0.1s ease-in-out;
+}
+
+/* 3: "В input_custom, для label, перед которым select
+ без содержащих option с атрибутом [value='none'], который выбран..." ЛОЛ!!!*/
+input_custom :first-child:focus+label,
+input_custom input:not(:placeholder-shown)+label,
+input_custom select:not(:has(option[value="none"]:checked))+label {
+    top: -25%;
+    font-size: calc(var(--base-size)* 0.75);
+    background: linear-gradient(to bottom, #f0f5fb,  #fff 50%,  #0000 90%);
+}
+input_custom :first-child:focus {
+    color: #212529;
+    border-color: #bdbdbd;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+}
+
+/*Строки Input подробный стиль*/
+input_custom input[name='day'] {
+    width: calc(var(--base-size)* var(--coef_b_fields)* 2);
+}
+input_custom select[name='month'] {
+    width: calc(var(--base-size)* var(--coef_b_fields)* 5 + 34px);
+    height: calc(var(--base-size)* 2 + 2px);
+}
+input_custom input[name='year'] {
+    width: calc(var(--base-size)* var(--coef_b_fields)* 3);
 }
 
