ПОЛНОЕ ОБНОВЛЕНИЕ - Временные страницы удалены за ненадобностью, ссылки на них были убраны. - Файлы скриптов, которые сопровождали те страницы, тоже убраны. - Файл с контактами, который временно находился в хранилище на стороне контейнера-клиента был убран. - Конфиги nginx были немного доработаны. - В файлах со стилями проведены косметические доработки, а также был добавлен файл для гугл иконок. - На клиентской части в некоторых скриптах упрощён код, добавлено больше пояснений. - Также написаны скрипты, разгружающие своим функционалом предыдущие скрипты. - Из них в том числе те, которые теперь позволяют работать с массивами данных как с полноценными объектами. - Улучшена обработка ошибок в файле с запросами к серверу. - Также добавлена работа с токенами, выдаваемыми сервером клиенту и обработка ошибки, происходящей в ходе шифрования токена. - Дополнен файл генерации формы, которая теперь может сериализовать и id контакта. - Немного изменён файл docker-compose.yaml, также появилась возможность использовать контейнерный artisan. - На стороне сервера убраны предустановленные файлы с миграциями БД, а также написана новая для решения поставленных задач. - Пример заполнения полей в .env.example был уточнён. - Также добавлен контроллер для работы с моделью контакта на стороне сервера. В Абстрактном контроллере добавлены функции для работы с запросами клиента. - Расширено разнообразие роутов для полноценного использования REST API во взаимодействиях между клиентом и сервером.

--- a/client/src/css/elements/NavBar.css
+++ b/client/src/css/elements/NavBar.css
@@ -42,11 +42,10 @@ nav {
     position: relative;
     width: calc(var(--header-font-size) * 2.5);
     height: calc(var(--header-font-size) * 2.5);
-    background: url("https://cdn-icons-png.flaticon.com/512/4698/4698817.png") center;
+    background: url('../../images/icon.svg') center;
     background-size: cover;
 }
 .home:active {
-    background: url("https://cdn-icons-png.flaticon.com/512/4698/4698819.png") center;
     background-size: cover;
 }
 .arrows {
