--- a/client/src/css/forContacts.css
+++ b/client/src/css/forContacts.css
@@ -1,6 +1,7 @@
 /*ROOTS*/
 :root {
-    --coef: 30; /*Coef proportionality of contacts columns*/
+
+    --width-col_name-col_email: calc(0.01 * (32)); /*Width of columns name & email (in 1/100)*/
     --coef_b_fields: 1.375; /*Coef proportionality of date fields*/
 }
 
@@ -8,7 +9,7 @@
 body {
     height: 100vh;
     /*background-image: url("https://get.wallhere.com/photo/artwork-digital-art-simple-background-space-planet-blue-background-shooting-stars-1819279.jpg");*/
-    background-image: url("../images/background_1.jpg");
+    background-image: url('../images/background_1.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -46,30 +47,10 @@ main>p {
     flex-direction: column;
 }
 .contacts_b_row {
-    display: flex;
-    position: relative;
-    flex-direction: row;
     align-items: center;
-    height: calc(var(--base-size)* 2);
-    cursor: pointer;
-}
-.contacts_b_row:after {
-    content:'';
-    width: 100%;
-    height: 80%;
-    position: absolute;
-    visibility: hidden;
-}
-.contacts_b_row:hover:after {
-    visibility: visible;
-    background: linear-gradient(to right, #0000 2%, #cbcccc 16%, #cbcccc 83%, #0000 98%);
-    opacity: 16%;
-}
-.contacts_b_row:hover>.contacts_b_field {
-    color: #4c4c4c;
-}
-.contacts_b_row:active:after {
-    background: linear-gradient(to right, #0000 2%, #2196f3 16%, #2196f3 84%, #0000 98%);
+    display: flex;
+    flex-direction: row;
+    height: min-content;
 }
 .contacts_b_none {
     height: calc(var(--base-size)* 10);
@@ -91,19 +72,60 @@ hr.line {
     width: inherit;
     background-image: linear-gradient(to right, #0000, #cbcccc 20%, #cbcccc 80%, #0000);
 }
+.contacts_b_fields {
+    align-items: inherit;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    height: calc(var(--base-size)* 2);
+    position: relative;
+    width: 95%;
+}
+.contacts_b_fields:after {
+    content:'';
+    min-width: 100%;
+    height: 80%;
+    position: absolute;
+    visibility: hidden;
+}
+.contacts_b_fields:hover:after {
+    visibility: visible;
+    background: linear-gradient(to right, #0000 2%, #cbcccc 8%, #cbcccc 92%, #0000 98%);
+    opacity: 16%;
+}
+.contacts_b_fields:hover>.contacts_b_field {
+    color: #4c4c4c;
+}
+.contacts_b_fields:active:after {
+    background: linear-gradient(to right, #0000 2%, #2196f3 8%, #2196f3 92%, #0000 98%);
+}
 .contacts_b_field {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 .col_name, .col_email {
-    width: calc(var(--coef) * 1%);
+    width: calc(100% * var(--width-col_name-col_email));
 }
-.col_phone, .col_birthday {
-    width: calc((100%  - var(--coef) * 1% * 2) / 2);
+.col_phone {
+    width: calc(100% * ((1 - var(--width-col_name-col_email) * 2) * (6/10)));
 }
-
-
+.col_birthday {
+    width: calc(100% * ((1 - var(--width-col_name-col_email) * 2) * (4/10)));
+}
+.col_action {
+    min-width: 5%;
+    opacity: 25%;
+    user-select: none;
+    z-index: 10;
+}
+.contacts_b_row:hover .col_action {
+    visibility: visible;
+    opacity: 1;
+}
+.col_action:active{
+    background: linear-gradient(to right, #0000 2%, #f3212140 50%, #0000 98%);
+}
 
 
 
@@ -121,6 +143,7 @@ hr.line {
 i {
     flex: 0 0 calc(var(--base-size)* 1.5);
     text-align: center;
+    color: #404040;
 }
 
 /*--- Строки Input общий стиль ---*/
